# GopherDen

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  nginx.conf  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: Dockerfile  main.py
backend/core/settings/: directories.py  settings.py
backend/db/: database.py  db_setup.py  init_db.py  models.py
backend/routes/: __init__.py
backend/routes/app/: __init__.py  about.py
backend/routes/chores/: __init__.py  chore.py
backend/routes/users/: __init__.py  user.py
backend/schema/: schemas.py
backend/utils/: logger.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/components/: HBSnackbar.vue
frontend/components/layout/: AppBar.vue  AppFooter.vue
frontend/composables/: useLogin.ts  usePasswords.ts
frontend/layouts/: default.vue  form.vue
frontend/pages/: index.vue  login.vue
frontend/plugins/: vuetify.js
tests/: conftest.py
tests/data/: fake_chores.txt  fake_people.csv  fake_tools.txt
tests/fixtures/: __init__.py  fixture_chores.py  fixture_database.py  fixture_tools.py  fixture_users.py
tests/unit_tests/: test_chores.py  test_tools.py  test_users.py
tests/utils/: __init__.py  generate_data_ollama.py  generation_helpers.py
